small overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -113,7 +113,7 @@ select:hover {
     flex: 1 1 0px;
     box-sizing: border-box;
     vertical-align: top;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .column-title,
